--- a/wp-content/themes/cookiequeen/css/chc-style.css
+++ b/wp-content/themes/cookiequeen/css/chc-style.css
@@ -45,6 +45,7 @@
 }
 
 .main-navlink-block {
+  padding: 20px;
   border-bottom: 5px solid transparent;
   opacity: 0.8;
   -webkit-transition: border 200ms cubic-bezier(.86, 0, .07, 1);
@@ -380,7 +381,7 @@
 .gallery_block-1--subtitle {
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 8px;
   border-style: none;
   border-width: 1px 1px 3px;
   border-color: #000 #000 #fff;
@@ -471,6 +472,10 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
   background-color: #ef5268;
 }
 
@@ -536,6 +541,7 @@
   font-size: 2.8em;
   text-align: center;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .news_block--button:hover {
@@ -608,8 +614,10 @@
 }
 
 .gallery_block1-title--link {
-  padding-bottom: 0px;
-  border-bottom: 5px solid #fff;
+  padding-bottom: 5px;
+  border-style: none;
+  border-bottom-width: 5px;
+  border-bottom-color: #fff;
   color: #fff;
   font-size: 0.8em;
   text-decoration: none;
@@ -940,7 +948,9 @@
   }
   .gallery_block1-title--link {
     padding-bottom: 7px;
-    border-bottom: 4px solid #fff;
+    border-style: none;
+    border-bottom-width: 4px;
+    border-bottom-color: #fff;
     color: #fff;
     font-size: 0.8em;
     text-decoration: none;
@@ -978,6 +988,9 @@
     border-style: none;
     background-color: hsla(0, 0%, 100%, .2);
     color: #ef5268;
+  }
+  .div-block-5 {
+    display: none;
   }
   .main-navbar--contain {
     display: block;
@@ -1019,7 +1032,7 @@
   .home_gallery--block1 {
     width: 100%;
     height: 200px;
-    padding-top: 0px;
+    padding-top: 15px;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -1028,10 +1041,10 @@
     -webkit-flex: 0 auto;
     -ms-flex: 0 auto;
     flex: 0 auto;
-    text-align: left;
+    text-align: center;
   }
   .gallery_block-1--title {
-    font-size: 0.9em;
+    font-size: 0.8em;
     text-align: center;
   }
   .gallery_block-1--subtitle {
@@ -1051,6 +1064,8 @@
     display: block;
     margin-right: auto;
     margin-left: auto;
+    padding-bottom: 0px;
+    border-style: none;
     font-size: 0.6em;
     text-align: center;
   }
@@ -1097,7 +1112,9 @@
   }
   .gallery_block1-title--link {
     padding-bottom: 3px;
-    border-bottom: 2px solid #fff;
+    border-style: none;
+    border-bottom-width: 2px;
+    border-bottom-color: #fff;
     -webkit-transition: all 200ms ease;
     transition: all 200ms ease;
     color: #fff;
