--- a/wp-content/themes/cookiequeen/css/chc-webflow.css
+++ b/wp-content/themes/cookiequeen/css/chc-webflow.css
@@ -1,3 +1,55 @@
+h1 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: 'Simply Sweet Serif', sans-serif;
+  font-size: 48px;
+  line-height: 44px;
+  font-weight: 400;
+}
+
+h2 {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  color: #4d3f3b;
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 600;
+  text-transform: none;
+}
+
+h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #ef5268;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+a {
+  color: #ef5268;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+a:hover {
+  position: static;
+  left: -2px;
+  top: 2px;
+}
+
+li {
+  padding-bottom: 4px;
+}
+
+em {
+  color: #259c86;
+  font-style: italic;
+  font-weight: 600;
+}
+
 .body {
   background-color: #f0f0f0;
   background-image: url('../images/ch_home-s1--bg.jpg');
@@ -9,39 +61,15 @@
 }
 
 .body.page_body {
+  background-color: #fff;
   background-image: none;
+  font-size: 14px;
 }
 
 .main-navbar {
   display: block;
   margin-top: 0px;
   background-color: transparent;
-}
-
-.main-navbar-contain {
-  position: static;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  min-width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-top: 0px;
-  float: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
 }
 
 .main-navlink-block {
@@ -123,24 +151,6 @@
   margin-bottom: 30px;
 }
 
-.div-block {
-  background-color: #0098ff;
-}
-
-.div-block-2 {
-  background-color: #0098ff;
-}
-
-.div-block-3 {
-  background-color: #6bcbb9;
-}
-
-.div-block-4 {
-  width: 100%;
-  height: 20px;
-  background-color: #6bcbb9;
-}
-
 .home_section-2--contain {
   min-height: 100%;
   -webkit-box-orient: vertical;
@@ -169,7 +179,6 @@
 
 .home_s1-block--button {
   position: relative;
-  z-index: 10000000;
   display: block;
   margin-top: 50px;
   padding: 25px 25px 40px 35px;
@@ -187,7 +196,7 @@
   -ms-flex-align: center;
   align-items: center;
   background-color: #ef5268;
-  box-shadow: 0 1px 3px 0 #621722;
+  box-shadow: -3px 3px 9px 1px rgba(0, 0, 0, .41);
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
   font-family: 'Simply Sweet Serif', sans-serif;
@@ -277,8 +286,12 @@
 }
 
 .home_gallery--block1 {
-  display: block;
-  max-height: 300px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-height: auto;
+  min-height: 300px;
   padding: 0px 15px 15px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -294,7 +307,6 @@
   align-items: stretch;
   -webkit-align-self: stretch;
   -ms-flex-item-align: stretch;
-  -ms-grid-row-align: stretch;
   align-self: stretch;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -381,12 +393,12 @@
 .gallery_block-1--subtitle {
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-bottom: 8px;
+  padding-bottom: 0px;
   border-style: none;
   border-width: 1px 1px 3px;
   border-color: #000 #000 #fff;
-  font-size: 0.8em;
-  line-height: 0.9em;
+  font-size: 0.6em;
+  line-height: 1.1em;
   font-weight: 400;
 }
 
@@ -545,8 +557,7 @@
 }
 
 .news_block--button:hover {
-  -webkit-filter: brightness(200%);
-  filter: brightness(200%);
+  background-color: #715c56;
 }
 
 .home_section3_quote {
@@ -619,7 +630,6 @@
   border-bottom-width: 5px;
   border-bottom-color: #fff;
   color: #fff;
-  font-size: 0.8em;
   text-decoration: none;
 }
 
@@ -645,6 +655,8 @@
 .page_section1--contain {
   display: block;
   min-height: 39em;
+  padding-right: 20px;
+  padding-left: 22px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -704,7 +716,9 @@
 }
 
 .page-navlink--block:hover {
-  border-bottom: 5px solid #fff;
+  border-style: none none solid;
+  border-bottom-width: 5px;
+  border-bottom-color: #fff;
   opacity: 1;
 }
 
@@ -763,6 +777,7 @@
   margin-top: 25px;
   margin-bottom: 25px;
   font-family: 'Simply Sweet Serif', sans-serif;
+  color: #4d3f3b;
   font-size: 3.8em;
   line-height: 1em;
   text-align: center;
@@ -770,27 +785,80 @@
   text-transform: uppercase;
 }
 
+.page_s1-content--contain {
+  display: block;
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Niramit, sans-serif;
+  color: #4d3f3b;
+  font-size: 1.4em;
+  line-height: 1.3em;
+}
+
+.gallery_block-1--ornament {
+  margin-top: 10px;
+  padding-top: 10px;
+}
+
+.unordered-list {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 24px;
+}
+
+.link {
+  border-style: none;
+  border-bottom-width: 3px;
+  border-bottom-color: transparent;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.link:hover {
+  border-right: 0px none transparent;
+  border-top-width: 0px;
+  border-bottom-color: #6bcbb9;
+  border-left-width: 0px;
+}
+
+.heading {
+  margin-top: 10px;
+  font-size: 2.4em;
+  line-height: 0.9em;
+}
+
+.heading-2 {
+  margin-top: 10px;
+  font-size: 1.2em;
+  line-height: 0.9em;
+}
+
+.heading-3 {
+  margin-bottom: 10px;
+  font-size: 1.8em;
+  line-height: 0.9em;
+}
+
+.italic-text {
+  font-weight: 500;
+}
+
+.page_content-link {
+  border-bottom: 3px solid transparent;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+
+.page_content-link:hover {
+  border-bottom: 3px solid #6bcbb9;
+}
+
 @media (max-width: 991px) {
   .main-navbar {
     display: block;
-  }
-  .main-navbar-contain {
-    display: block;
-    padding-top: 0px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    text-align: center;
   }
   .main-navlink-block {
     border-style: none;
@@ -814,7 +882,7 @@
   }
   .navbar-mobile-menu {
     position: static;
-    padding-bottom: 28px;
+    padding-bottom: 25px;
     float: none;
     -webkit-align-self: flex-start;
     -ms-flex-item-align: start;
@@ -827,8 +895,8 @@
     width: 100%;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 14px;
-    padding-bottom: 24px;
+    padding-top: 15px;
+    padding-bottom: 25px;
     float: none;
     background-color: #ef5268;
     text-align: center;
@@ -837,21 +905,19 @@
     width: 27rem;
     margin-bottom: 17px;
   }
-  .div-block-2 {
-    display: none;
-  }
   .home_s1-block--text {
     margin-top: 6px;
     font-size: 1.4rem;
   }
   .home_s1-block--button {
+    display: block;
     padding-top: 20px;
-    padding-bottom: 30px;
-    -webkit-box-orient: vertical;
+    padding-bottom: 20px;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     font-size: 2.2em;
   }
   .home_s1-contain--imgs {
@@ -862,6 +928,7 @@
   .home_gallery--block1 {
     width: 100%;
     height: 300px;
+    min-height: auto;
     -webkit-box-align: start;
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
@@ -1020,6 +1087,9 @@
   .home_section-1--contain {
     min-height: 400px;
   }
+  .navbar-mobile-menu {
+    padding-top: 15px;
+  }
   .home_img--logo {
     width: 25rem;
   }
@@ -1031,7 +1101,7 @@
   }
   .home_gallery--block1 {
     width: 100%;
-    height: 200px;
+    height: auto;
     padding-top: 15px;
     -webkit-box-align: center;
     -webkit-align-items: center;
@@ -1084,10 +1154,17 @@
     line-height: 1.5rem;
   }
   .home_s1-block--button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     width: 100%;
     margin-top: 30px;
+    padding-bottom: 29px;
+    text-align: center;
   }
   .home_gallery--block1 {
+    height: auto;
     padding-bottom: 26px;
   }
   .gallery_block-1--title {
@@ -1123,6 +1200,12 @@
   }
   .gallery_block1-title--link:hover {
     border-bottom-style: none;
+  }
+  .home_s1-block-button--arrow {
+    top: 0px;
+  }
+  .page_s1-content--contain {
+    font-size: 1.2em;
   }
 }
 
