--- a/wp-content/themes/cookiequeen/css/chc-webflow.css
+++ b/wp-content/themes/cookiequeen/css/chc-webflow.css
@@ -856,6 +856,79 @@ em {
   border-bottom: 3px solid #6bcbb9;
 }
 
+.gallery_section1--contain {
+  display: block;
+  min-height: 39em;
+  margin-top: 40px;
+  padding-right: 20px;
+  padding-left: 22px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: transparent;
+  line-height: 20px;
+}
+
+.gallery_pg_columns-row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 15px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.col {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.gallery_pg_cat-title {
+  font-family: Niramit, sans-serif;
+  color: #4d3f3b;
+  font-size: 2em;
+  line-height: 1.5em;
+  text-align: center;
+  text-transform: none;
+}
+
 @media (max-width: 991px) {
   .main-navbar {
     display: block;
@@ -1081,6 +1154,16 @@ em {
     background-color: #e7e7e7;
     color: #fff;
   }
+  .gallery_section1--contain {
+    min-height: 500px;
+    margin-top: 25px;
+  }
+  .gallery_pg_columns-row {
+    display: block;
+  }
+  .gallery_pg_cat-title {
+    font-size: 1.2em;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1141,6 +1224,51 @@ em {
   }
   .page_section1--contain {
     min-height: 400px;
+  }
+  .gallery_section1--contain {
+    min-height: 400px;
+  }
+  .gallery_pg_columns-row {
+    margin-bottom: 5px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+  }
+  .col {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 5px;
+    padding-bottom: 5px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .gallery_pg_cat-title {
+    font-size: 1.6em;
   }
 }
 
@@ -1206,6 +1334,19 @@ em {
   }
   .page_s1-content--contain {
     font-size: 1.2em;
+  }
+  .gallery_section1--contain {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .gallery_pg_columns-row {
+    margin-bottom: 0px;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .gallery_pg_cat-title {
+    font-size: 0.9em;
   }
 }
 
