--- a/wp-content/themes/cookiequeen/css/style.css
+++ b/wp-content/themes/cookiequeen/css/style.css
@@ -24,6 +24,12 @@ background-image: url(../images/ch_home-s1--bg.jpg);
 }
 
 
+/* recently added products */
+.home_section-2--columns  .gallery_section1--contain {
 
+}
+.woocommerce-page.columns-3 ul.products li.product, .woocommerce.columns-3 ul.products li.product {
+    width: 25%;
+}
 
 /* FONTS */
