--- a/wp-content/themes/cookiequeen/css/chc-webflow.css
+++ b/wp-content/themes/cookiequeen/css/chc-webflow.css
@@ -36,6 +36,8 @@ h3 {
 }
 
 a {
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
   color: #ef5268;
   font-weight: 500;
   text-decoration: none;
@@ -648,11 +650,23 @@ em {
   text-decoration: none;
 }
 
+.gallery_block1-title--link:hover {
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
+  text-decoration: none;
+}
+
 .gallery_img--overlay {
   position: relative;
   width: 100%;
   height: 100%;
   background-color: hsla(0, 0%, 100%, .31);
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+
+.gallery_img--overlay:hover {
+  background-color: hsla(0, 0%, 100%, 0);
 }
 
 .home-s1-img4 {
