--- a/wp-content/themes/cookiequeen/css/chc-webflow.css
+++ b/wp-content/themes/cookiequeen/css/chc-webflow.css
@@ -803,8 +803,27 @@ em {
 }
 
 .page_s1-title-contain {
-  margin-top: 25px;
-  margin-bottom: 25px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 800px;
+  margin: 0px auto 25px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
   font-family: 'Simply Sweet Serif', sans-serif;
   color: #4d3f3b;
   font-size: 3.8em;
@@ -956,6 +975,30 @@ em {
   font-family: Niramit, sans-serif;
   font-size: 16px;
   text-align: center;
+}
+
+.back-to-gallery {
+  font-family: Niramit, sans-serif;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.back-to-gallery:hover {
+  color: #4d3f3b;
+}
+
+.global-breadcrumb {
+  margin-top: 25px;
+  margin-left: 80px;
+  letter-spacing: 0%;
+}
+
+.text-span {
+  position: relative;
+  bottom: -6px;
+  font-family: 'Simply Sweet Serif', sans-serif;
+  font-size: 37px;
 }
 
 @media (max-width: 991px) {
@@ -1298,6 +1341,16 @@ em {
   }
   .gallery_pg_cat-title {
     font-size: 1.6em;
+  }
+  .back-to-gallery {
+    font-size: 13px;
+  }
+  .global-breadcrumb {
+    margin-left: auto;
+    text-align: center;
+  }
+  .text-span {
+    font-size: 35px;
   }
 }
 
