--- a/wp-content/themes/cookiequeen/css/chc-webflow.css
+++ b/wp-content/themes/cookiequeen/css/chc-webflow.css
@@ -1,7 +1,8 @@
 body {
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  height: 100%;
+  font-family: 'Roboto', Helvetica, sans-serif;
   color: #333;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 20px;
 }
 
@@ -188,7 +189,7 @@ em {
 
 .home_s1-block--text {
   margin-top: 30px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   font-size: 1.5rem;
   line-height: 2rem;
   text-align: center;
@@ -521,7 +522,7 @@ em {
 
 .news_title--date {
   margin-top: 1px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   color: #fff;
   font-size: 1.1em;
   font-weight: 400;
@@ -534,7 +535,7 @@ em {
   margin-top: 20px;
   margin-right: 70px;
   margin-left: 70px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   color: #fff;
   font-size: 1.3em;
   line-height: 1.6em;
@@ -838,7 +839,7 @@ em {
   max-width: 800px;
   margin-right: auto;
   margin-left: auto;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   color: #4d3f3b;
   font-size: 1.4em;
   line-height: 1.3em;
@@ -943,7 +944,7 @@ align-items: center;
 }
 
 .gallery_pg_cat-title {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   color: #4d3f3b;
   font-size: 2em;
   line-height: 1.5em;
@@ -960,13 +961,14 @@ align-items: center;
   max-width: 600px;
   margin-right: auto;
   margin-left: auto;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-family: 'Roboto', Helvetica, sans-serif;
+  font-size: .875em;
+  line-height: 1.45em;
   text-align: center;
 }
 
 .back-to-gallery {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   font-size: 16px;
   letter-spacing: 1px;
   text-transform: uppercase;
