--- a/wp-content/themes/cookiequeen/css/style.css
+++ b/wp-content/themes/cookiequeen/css/style.css
@@ -1,6 +1,13 @@
+/* FONTS */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
+
 /* GLOBAL */
 body {
   height: 100%;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .fancybox-active {
@@ -37,11 +44,9 @@ background-image: url(../images/ch_home-s1--bg.jpg);
   max-width: 500px;
 }
   .news_content--text > p {
-  font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
   color: #fff;
-  font-size: 1em;
-  line-height: 1.6em;
-  letter-spacing: 0.5px;
+  font-size: .875em;
 }
 
 
@@ -53,9 +58,9 @@ background-image: url(../images/ch_home-s1--bg.jpg);
 }
 
 .gallery_pg_cat-title {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #4d3f3b;
-    font-size: 1.5em;
+    font-size: 1.15em;
     line-height: 1.15em;
     text-align: center;
     text-transform: none;
@@ -85,11 +90,11 @@ background-image: url(../images/ch_home-s1--bg.jpg);
 }
 
 .gallery_pg_cat-title.single {
-    font-family: 'Open Sans', sans-serif;
-    color: #4d3f3b;
-    font-size: 1.15em;
-    line-height: 1.15em;
-    text-align: center;
-    text-transform: none;
-    padding: .8em;
+  font-family: 'Roboto', sans-serif;
+  color: #4d3f3b;
+  font-size: 1.15em;
+  line-height: 1.15em;
+  text-align: center;
+  text-transform: none;
+  padding: .45em 0 1em;
 }
