--- a/wp-content/themes/cookiequeen/css/style.css
+++ b/wp-content/themes/cookiequeen/css/style.css
@@ -8,7 +8,7 @@
 
 body {
   height: 100%;
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   color: #313131;
   font-size: 16px;
   line-height: 20px;
