--- a/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
+++ b/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
@@ -366,6 +366,7 @@ em {
   -ms-flex-align: center;
   align-items: center;
   background-color: #f8f8f8;
+  text-align: center;
 }
 
 .home_section-3--columns {
@@ -1162,6 +1163,21 @@ em {
   filter: none;
 }
 
+.page-logo {
+  width: 170px;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-bottom: 1px none #000;
+}
+
+.page-logo-link {
+  border-bottom-style: none;
+}
+
+.page-logo-link:hover {
+  border-bottom-style: none;
+}
+
 @media (max-width: 991px) {
   .main-navbar {
     display: block;
@@ -1206,10 +1222,9 @@ em {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
     float: none;
-    background-color: #ef5268;
+    background-color: #e84a5a;
     text-align: center;
   }
   .home_s1--block {
@@ -1348,6 +1363,7 @@ em {
   .page--navbar-contain {
     display: block;
     padding-top: 0px;
+    padding-bottom: 0px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -1361,6 +1377,7 @@ em {
     -webkit-align-items: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
+    background-color: transparent;
     text-align: center;
   }
   .page-navlink--block {
@@ -1371,8 +1388,7 @@ em {
     text-align: center;
   }
   .page-navlink--block:hover {
-    border-style: none;
-    background-color: hsla(0, 0%, 100%, 0.2);
+    border-bottom-style: none;
     color: #ef5268;
   }
   .header-bsr {
@@ -1397,7 +1413,14 @@ em {
     text-align: center;
   }
   .page-navlink--contain {
-    background-color: #ebebeb;
+    margin-left: 0px;
+    padding-bottom: 12px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    background-color: #f8f8f8;
     color: #fff;
   }
   .home-header-content {
@@ -1464,6 +1487,13 @@ em {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+  }
+  .order-column-01 {
+    display: block;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
   .order-list-item {
     max-width: 100%;
@@ -1568,6 +1598,9 @@ em {
     padding-top: 20px;
   }
   .social.desk {
+    display: none;
+  }
+  .page-logo-link {
     display: none;
   }
 }
@@ -1699,10 +1732,10 @@ em {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
   }
   .order-column-02 {
     -webkit-box-ordinal-group: 2;
