--- a/wp-content/themes/cookiequeen/css/style.css
+++ b/wp-content/themes/cookiequeen/css/style.css
@@ -5,75 +5,19 @@
      font-weight: 400;
      font-style: normal;
 }
- body {
-     height: 100%;
-     font-family: 'Roboto', Helvetica, sans-serif;
-     color: #313131;
-     line-height: 20px;
-}
- .fancybox-active {
-     height: 100%;
-}
- body.page {
-     background-image: none;
-}
 
- a {
-     -webkit-transition: all 200ms ease;
-     transition: all 200ms ease;
-     color: #ef5268;
-     font-weight: 500;
-     text-decoration: none;
-}
- a:hover {
-     position: static;
-     left: -2px;
-     top: 2px;
-}
- li {
-     padding-bottom: 4px;
-}
- em {
-     color: #259c86;
-     font-style: italic;
-     font-weight: 600;
-}
- .body {
-     background-color: #f0f0f0;
-     -webkit-transition: opacity 200ms linear;
-     transition: opacity 200ms linear;
-}
+/* HOMEPAGE */
+/* NAV */
+     .main-navlink-contain {
 
- .body.page {
-     background-image: none;
+          flex-basis: 75%;
+        text-align: center;
+    }
+  /* header */
+
+.header-imgs {
+    z-index: -10000;
 }
-
-
-
- .global-footer-contain {
-     height: 170px;
-     margin-top: -170px;
-     -webkit-box-orient: vertical;
-     -webkit-box-direction: normal;
-     -webkit-flex-direction: column;
-     -ms-flex-direction: column;
-     flex-direction: column;
-     -webkit-box-pack: center;
-     -webkit-justify-content: center;
-     -ms-flex-pack: center;
-     justify-content: center;
-     -webkit-box-align: center;
-     -webkit-align-items: center;
-     -ms-flex-align: center;
-     align-items: center;
-     background-color: #fff;
-     background-image: url('../images/ch_home-s1--footer.jpg');
-     background-position: 0px 0px;
-     background-size: cover;
-}
-
-
-
  .gallery_block-1--ornament {
      margin-top: 10px;
      padding-top: 10px;
@@ -109,6 +53,8 @@
  .page_content-link:hover {
      border-bottom: 3px solid #6bcbb9;
 }
+
+/* GALLERY */
  .gallery_section1--contain {
      display: flex;
      max-width: 1200px;
@@ -186,7 +132,13 @@
      font-family: 'Simply Sweet Serif', sans-serif;
      font-size: 37px;
 }
+
+
  @media (max-width: 991px) {
+
+.home-header-content {
+z-index: 999;
+}
      .main-navbar {
          display: block;
          z-index: 1000;
@@ -208,26 +160,9 @@
          color: #fff;
     }
 
-     .navbar-mobile-menu {
-         position: static;
-         padding-bottom: 25px;
-         float: none;
-         -webkit-align-self: flex-start;
-         -ms-flex-item-align: start;
-         align-self: flex-start;
-         background-color: #6bcbb9;
-         color: #fff;
-    }
-     .navbar-mobile-menu.w--open {
-         display: block;
-         width: 100%;
-         margin-right: auto;
-         margin-left: auto;
-         padding-top: 15px;
-         padding-bottom: 25px;
-         float: none;
-         background-color: #ef5268;
-         text-align: center;
+
+    .header-imgs {
+        z-index: -10000;
     }
      .home_img--logo {
          width: 27rem;
@@ -291,17 +226,7 @@
          -ms-flex-direction: column;
          flex-direction: column;
     }
-     .home_section-3--columns {
-         -webkit-box-orient: vertical;
-         -webkit-box-direction: normal;
-         -webkit-flex-direction: column;
-         -ms-flex-direction: column;
-         flex-direction: column;
-         -webkit-box-align: center;
-         -webkit-align-items: center;
-         -ms-flex-align: center;
-         align-items: center;
-    }
+
      .home_news-block--contain {
          display: -webkit-box;
          display: -webkit-flex;
@@ -362,18 +287,7 @@
          align-items: stretch;
          text-align: center;
     }
-     .page-navlink--block {
-         border-style: none;
-         -webkit-transition: border 200ms cubic-bezier(.86, 0, .07, 1), all 200ms ease;
-         transition: border 200ms cubic-bezier(.86, 0, .07, 1), all 200ms ease;
-         color: #ef5268;
-         text-align: center;
-    }
-     .page-navlink--block:hover {
-         border-style: none;
-         background-color: hsla(0, 0%, 100%, .2);
-         color: #ef5268;
-    }
+
      .div-block-5 {
          display: none;
     }
