--- a/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
+++ b/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
@@ -75,6 +75,7 @@ em {
 
 .body.home {
   height: 100%;
+  margin: 0px;
   background-color: transparent;
   line-height: 22px;
 }
@@ -349,9 +350,9 @@ em {
 
 .home_section-3--contain {
   min-height: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
   padding-top: 40px;
-  padding-bottom: 15px;
+  padding-bottom: 40px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -487,8 +488,13 @@ em {
 }
 
 .global-footer-contain {
-  height: 170px;
-  margin-top: -170px;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100px;
+  margin-top: -100px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -502,14 +508,12 @@ em {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: #fff;
-  background-image: url('../images/ch_home-s1--footer.jpg');
-  background-position: 0px 0px;
-  background-size: cover;
+  background-color: #e84a5a;
 }
 
 .global--content--contain {
-  padding: 0px 0px 170px;
+  position: relative;
+  padding: 0px 0px 100px;
 }
 
 .gallery_img--overlay {
@@ -526,7 +530,7 @@ em {
 }
 
 .page--navbar-contain {
-  position: static;
+  position: fixed;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1115,8 +1119,13 @@ em {
   padding-right: 20px;
 }
 
+.page-contain {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
 .page-contain.order {
-  padding-top: 40px;
+  padding-top: 80px;
   padding-bottom: 40px;
   background-color: #f8f8f8;
 }
@@ -1144,6 +1153,10 @@ em {
   order: 1;
 }
 
+.social.desk.footer {
+  display: none;
+}
+
 .social-image {
   width: 30px;
   margin-right: 10px;
@@ -1166,7 +1179,7 @@ em {
 .page-logo {
   width: 170px;
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: 20px;
   border-bottom: 1px none #000;
 }
 
@@ -1176,6 +1189,219 @@ em {
 
 .page-logo-link:hover {
   border-bottom-style: none;
+}
+
+.about-holder {
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 0px;
+}
+
+.about-text {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-bottom: 2px none #e84a5a;
+  font-weight: 300;
+}
+
+.about-contain {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 650px;
+  margin: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.divider {
+  width: 150px;
+  margin: auto;
+}
+
+.about-row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.about-img {
+  width: 175px;
+  margin-right: 24px;
+  box-shadow: -2px 3px 2px 0 rgba(39, 39, 39, 0.78);
+  -webkit-transform: rotate(-6deg);
+  -ms-transform: rotate(-6deg);
+  transform: rotate(-6deg);
+}
+
+.footer-navbar {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: transparent;
+}
+
+.footer-navlink-contain {
+  position: static;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  float: none;
+  clear: none;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-ordinal-group: 2;
+  -webkit-order: 1;
+  -ms-flex-order: 1;
+  order: 1;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+.footer-navlink-block {
+  margin-right: 20px;
+  margin-left: 20px;
+  padding: 20px 0px 10px;
+  border-bottom: 2px solid transparent;
+  -webkit-transition: border 200ms cubic-bezier(.86, 0, .07, 1);
+  transition: border 200ms cubic-bezier(.86, 0, .07, 1);
+  font-family: 'Roboto Slab', sans-serif;
+  color: #fff;
+  font-size: 0.9em;
+  line-height: 1.1em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.footer-navlink-block:hover {
+  border-width: 1px 1px 2px;
+  border-color: #000 #000 #fff;
+  border-right-style: none;
+  border-bottom-style: solid;
+  border-left-style: none;
+  color: #fff;
+}
+
+.footer-colophon {
+  position: static;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  float: none;
+  clear: none;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-ordinal-group: 2;
+  -webkit-order: 1;
+  -ms-flex-order: 1;
+  order: 1;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  color: #fff;
+  font-size: 11px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.heading {
+  font-family: 'Simply Sweet Serif', sans-serif;
+  font-size: 3.5em;
+}
+
+.heading-2 {
+  font-family: 'Simply Sweet Serif', sans-serif;
+}
+
+.page-heading {
+  font-family: 'Simply Sweet Serif', sans-serif;
+  font-size: 3.5em;
+  letter-spacing: 1px;
 }
 
 @media (max-width: 991px) {
@@ -1340,6 +1566,12 @@ em {
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row;
+  }
+  .global-footer-contain {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    background-color: #e84a5a;
   }
   .global--content--contain {
     min-height: 100%;
@@ -1595,13 +1827,68 @@ em {
     align-items: center;
   }
   .page-contain.order {
-    padding-top: 20px;
+    padding-top: 40px;
   }
   .social.desk {
     display: none;
   }
+  .social.desk.footer {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .social-link {
+    -webkit-filter: brightness(200%) saturate(0%);
+    filter: brightness(200%) saturate(0%);
+  }
+  .social-link:hover {
+    opacity: 1;
+  }
   .page-logo-link {
     display: none;
+  }
+  .footer-navbar {
+    display: none;
+  }
+  .footer-navlink-contain {
+    padding-bottom: 20px;
+    background-color: #ebebeb;
+    color: #fff;
+  }
+  .footer-navlink-block {
+    padding: 10px;
+    border-style: none;
+    -webkit-transition: border 200ms cubic-bezier(.86, 0, .07, 1), all 200ms ease;
+    transition: border 200ms cubic-bezier(.86, 0, .07, 1), all 200ms ease;
+    font-family: 'Roboto Slab', sans-serif;
+    color: #ef5268;
+    font-size: 1.6em;
+    font-weight: 300;
+    text-align: center;
+  }
+  .footer-navlink-block:hover {
+    border-style: none;
+    background-color: hsla(0, 0%, 100%, 0.2);
+    color: #ef5268;
+  }
+  .footer-colophon {
+    padding-bottom: 10px;
   }
 }
 
@@ -1670,7 +1957,7 @@ em {
   }
   .home-header-content {
     margin-bottom: 0px;
-    font-size: 13px;
+    font-size: 16px;
     line-height: 16px;
   }
   .header-img-01 {
@@ -1756,6 +2043,7 @@ em {
   }
   .button.melon {
     background-color: #e84a5a;
+    font-size: 2.6em;
   }
   .button.melon.green.small {
     background-color: #2ccaac;
@@ -1775,9 +2063,8 @@ em {
   .header-imgs {
     height: 500px;
   }
-  .page-contain.order {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  .about-contain {
+    padding: 0px 40px;
   }
 }
 
@@ -1824,6 +2111,9 @@ em {
     max-width: 250px;
     margin-left: -15px;
   }
+  .global-footer-contain {
+    padding-top: 10px;
+  }
   .global--content--contain {
     margin-top: auto;
   }
@@ -1868,6 +2158,9 @@ em {
     margin-left: 10px;
     padding-right: 20px;
     padding-left: 20px;
+  }
+  .about-contain {
+    padding: 20px;
   }
 }
 
